--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Glooory/nano-reacts.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Glooory/nano-reacts/issues"
+  },
+  "homepage": "https://github.com/Glooory/nano-reacts#readme",
   "dependencies": {
-    "@types/react": "^17.0.15",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "react-router-dom": "^5.2.0",
+    "webpack": "^5.51.1"
   }
 }
