--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open",
+    "start": "webpack serve",
     "build": "webpack --config webpack.config.js"
   },
   "repository": {
@@ -20,10 +20,11 @@
   },
   "homepage": "https://github.com/Glooory/fun-reacts#readme",
   "dependencies": {
+    "@types/history": "^4.7.9",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
-    "history": "^5.0.1",
+    "history": "^4.9.0",
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
